--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfume Shop</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />"
 </head>
 
 <body>
@@ -18,15 +22,42 @@
 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#home">Home</a></li>
-
+            <li><a href="#shop">Shop</a></li>
+            <li><a href="#new">New Arrival</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </header>
+    <!--Home-->
+    <section class="home" id="home">
+        <div class="home-text">
+            <h1>Breath <span>the brew</span></h1>
+            <a href="shop" class="btn">Shop Now</a>
+            <h3>Lancome</h3>
+            <div class="stars">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star-half'></i>
+            </div>
+        </div>
+    </section>
+    <!--Shop-->
+    <section class="shop" id="shop">
+        <div class="heading">
+            <span>New Arrival</span>
+            <h2>Shop Now</h2>
+        </div>
+        <div class="shop-container">
+            <div class="box">
+                <div class="box-img">
+                    <img src="./images/Lancôme La Nuit Trésor Nude Eau de Toilette, 100ml.jpg" alt="">
+                </div>
+                <div class="title-price"></div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
