--- a/index.html
+++ b/index.html
@@ -10,11 +10,66 @@
     <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />"
+    />
 </head>
 
 <body>
-</body>
+    <section>
+        <nav>
+            <a href="#" class="logo">Jabulela</a>
 
-</html>
+            <ul>
+                <li><a href="#">Home</li>
+        <li><a href="#">About</li>
+        <li><a href="#">Contact</li>
+        </ul>
+        </nav>
+        <div class="text-container">
+            <p>Black </p>
+            <p>Girls</p>
+            <p>Rule</p>
+            <button class="diversity">Shop Now</button>
+        </div>
+    </section>
+    <div id="sect-1" class="section">
+     <div class="container">
+       <div class="row">
+           <div class="col">
+               <span></span>
+               <img src="./images/Ari 50 ml.jpg" alt="">
+           </div>
+           <div class="col">
+               <h3><b>Glow</b></h3>
+             <p>Be the</p>
+         </div>
+         <div class="col">
+             <span></span>
+            <img src="./images/Types Of Photography Genres to Consider as a Career Choice! - VenueLook Blog.jpg" alt="">
+         </div>
+         <div class="col">
+             <h3><b>Live</b></h3>
+             <p>Best</p>
+         </div>
+         <div class="col">
+             <h3><b>Love</b></h3>
+           <p>Brightest</p>
+       </div>
+         <div class="col">
+             <span class="arrow"></span>
+             <img src="./images/Unknown.jpg" alt="">
+         </div>
+         <div class="col">
+             <h3><b>Laugh</b></h3>
+             <p>Star</p>
+         </div>
+       <div class="col">
+           <span class="arrow"></span>
+          <img src="./images/Olympea Paco Rabanne.jpg" alt="">
+       </div>
+       </div>
+       </div>
+       </div>
+
+</body>
