--- a/index.html
+++ b/index.html
@@ -5,71 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfume Shop</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="utilities.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="./style.css">
+    <link href='http://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <title>Furniture Shop</title>
 </head>
 
 <body>
-    <section>
-        <nav>
-            <a href="#" class="logo">Jabulela</a>
-
-            <ul>
-                <li><a href="#">Home</li>
-        <li><a href="#">About</li>
-        <li><a href="#">Contact</li>
-        </ul>
-        </nav>
-        <div class="text-container">
-            <p>Black </p>
-            <p>Girls</p>
-            <p>Rule</p>
-            <button class="diversity">Shop Now</button>
+    <header>
+        <div class="nav container">
+            <!--Menu Icon-->
+            <div class="menu-icon">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <!--Nav List-->
+            <ul class="navbar">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#popular">Popular</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#products">Products</a></li>
+            </ul>
+            <!--Logo-->
+            <a href="#" class="logo">
+            Furn<span>. </span>
+            </a>
+            <!--Nav Icons-->
+            <div class="nav-icons">
+                <i class='bx bx-cart-alt' id="cart-icon"></i>
+                <i class='bx bx-user' id="user-icon"></i>
+            </div>
         </div>
-    </section>
-    <div id="sect-1" class="section">
-     <div class="container">
-       <div class="row">
-           <div class="col">
-               <span></span>
-               <img src="./images/Ari 50 ml.jpg" alt="">
-           </div>
-           <div class="col">
-               <h3><b>Glow</b></h3>
-             <p>Be the</p>
-         </div>
-         <div class="col">
-             <span></span>
-            <img src="./images/Types Of Photography Genres to Consider as a Career Choice! - VenueLook Blog.jpg" alt="">
-         </div>
-         <div class="col">
-             <h3><b>Live</b></h3>
-             <p>Best</p>
-         </div>
-         <div class="col">
-             <h3><b>Love</b></h3>
-           <p>Brightest</p>
-       </div>
-         <div class="col">
-             <span class="arrow"></span>
-             <img src="./images/Unknown.jpg" alt="">
-         </div>
-         <div class="col">
-             <h3><b>Laugh</b></h3>
-             <p>Star</p>
-         </div>
-       <div class="col">
-           <span class="arrow"></span>
-          <img src="./images/Olympea Paco Rabanne.jpg" alt="">
-       </div>
-       </div>
-       </div>
-       </div>
-
+    </header>
+    <script src="./main.js"></script>
 </body>
+
+</html>
