--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </header>
-    <script src="./main.js"></script>
+    <script src=""></script>
 </body>
 
 </html>
