--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
                 <i class='bx bx-cart-alt' id="cart-icon"></i>
                 <i class='bx bx-user' id="user-icon"></i>
             </div>
+            <div class="cart">
+                <div class="cart-content">
+                    <img src="./img/products1.png" alt="">
+                </div>
+            </div>
         </div>
     </header>
-    <script src=""></script>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
