--- a/index.html
+++ b/index.html
@@ -13,36 +13,27 @@
 <body>
     <header>
         <div class="nav container">
-            <!--Menu Icon-->
+
             <div class="menu-icon">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-            <!--Nav List-->
             <ul class="navbar">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#popular">Popular</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#popular">Popular</a></li>
                 <li><a href="#products">Products</a></li>
             </ul>
-            <!--Logo-->
-            <a href="#" class="logo">
-            Furn<span>. </span>
-            </a>
-            <!--Nav Icons-->
+            <a href="#" class="logo" id="logo">
+                Furn<span>.</span> </a>
             <div class="nav-icons">
-                <i class='bx bx-cart-alt' id="cart-icon"></i>
-                <i class='bx bx-user' id="user-icon"></i>
+                <i class="bx bx-cart-alt" id="cart-icon"></i>
+                <i class="bx bx-user" id="cart-icon"></i>
             </div>
-            <div class="cart">
-                <div class="cart-content">
-                    <img src="./img/products1.png" alt="">
-                </div>
-            </div>
+            </a>
         </div>
     </header>
-
     <script src="main.js"></script>
 </body>
 
