--- a/index.html
+++ b/index.html
@@ -31,7 +31,35 @@
                 <i class="bx bx-cart-alt" id="cart-icon"></i>
                 <i class="bx bx-user" id="cart-icon"></i>
             </div>
-            </a>
+            <div class="cart">
+                <div class="cart-content">
+                    <!--Box 1-->
+                    <div class="cart-box">
+                        <img src="img/products1.png" alt="">
+                        <div class="cart-text">
+                            <h3>Soft Furniture</h3>
+                            <span>$150</span>
+                            <span>*1</span>
+                        </div>
+                        <i class="bx bx-trash" id="cart-icon"></i>
+                    </div>
+                    <!--Box2-->
+                    <div class="cart-box">
+                        <img src="img/popular2.png" alt="">
+                        <div class="cart-text">
+                            <h3>Soft Furniture</h3>
+                            <span>$150</span>
+                            <span>*1</span>
+                        </div>
+                        <i class="bx bx-trash" id="cart-icon"></i>
+                    </div>
+                    <div class="total">
+                        <h2>2 Items</h2>
+                        <span>Total: $300</span>
+                    </div>
+                    <a href="#" class="btn">Proceed to pay</a>
+                </div>
+            </div>
         </div>
     </header>
     <script src="main.js"></script>
