--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
                     <a href="#" class="btn">Proceed to pay</a>
                 </div>
             </div>
+            <!--Login Form-->
+            <div class="login-form">
+                <form action="">
+                    <h2>Login to Continue</h2>
+                    <input type="email" name="" id="" placeholder="Your Email..." required>
+                    <input type="password" name="" id="" placeholder="Password" required>
+                    <a href="#">Forgot Password</a>
+                    <input type="submit" value="Login" class="btn">
+                    <a href="#">Create Account</a>
+                </form>
+            </div>
         </div>
     </header>
     <script src="main.js"></script>
