--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
             <!--Login Form-->
             <div class="login-form">
                 <form action="">
-                    <h2>Login to Continue</h2>
-                    <input type="email" name="" id="" placeholder="Your Email..." required>
-                    <input type="password" name="" id="" placeholder="Password" required>
-                    <a href="#">Forgot Password</a>
-                    <input type="submit" value="Login" class="btn">
+                    <h2>Login To continue</h2>
+                    <input type="email" name="l" placeholder="Your Email..." required>
+                    <input type="password" name="" placeholder="Password" required>
+                    <a href="">Forgot Password</a>
+                    <input type="submit" value="Log In" class="btn">
                     <a href="#">Create Account</a>
                 </form>
             </div>
+        </div>
         </div>
     </header>
     <script src="main.js"></script>
