--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="login-form">
                 <form action="">
                     <h2>Login To continue</h2>
-                    <input type="email" name="l" placeholder="Your Email..." required>
+                    <input type="email" name="" placeholder="Your Email..." required>
                     <input type="password" name="" placeholder="Password" required>
                     <a href="">Forgot Password</a>
                     <input type="submit" value="Log In" class="btn">
@@ -74,6 +74,7 @@
         </div>
         </div>
     </header>
+    <!--Link to JS-->
     <script src="main.js"></script>
 </body>
 
