--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Furn<span>.</span> </a>
             <div class="nav-icons">
                 <i class="bx bx-cart-alt" id="cart-icon"></i>
-                <i class="bx bx-user" id="cart-icon"></i>
+                <i class="bx bx-user" id="user-icon"></i>
             </div>
             <div class="cart">
                 <div class="cart-content">
@@ -74,6 +74,24 @@
         </div>
         </div>
     </header>
+    <!--Home Section Start-->
+    <section class="home container" id="home">
+        <div class="home-text">
+            <h1><span>Modern Furniture</span><br>For Your House</h1>
+            <p>Minimalism at it's peak</p>
+            <a href="#" class="btn">Shop More</a>
+        </div>
+        <!--Home Image-->
+        <div class="home-img">
+            <img src="./img/Sofa.png" alt="">
+        </div>
+    </section>
+    <!--Home Section End-->
+    <!--Popular Section Start-->
+    <section class="popular container" id="popular">
+
+    </section>
+    <!--Popular Section End-->
     <!--Link to JS-->
     <script src="main.js"></script>
 </body>
