--- a/index.html
+++ b/index.html
@@ -89,7 +89,57 @@
     <!--Home Section End-->
     <!--Popular Section Start-->
     <section class="popular container" id="popular">
-
+        <div class="heading">
+            <h2>Popular</h2>
+            <a href="">See all</a>
+        </div>
+        <!--Popular Content-->
+        <div class="popular-content">
+            <!--Box 1-->
+            <div class="box">
+                <img src="./img/popular1.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 2-->
+            <div class="box">
+                <img src="./img/popular2.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 3-->
+            <div class="box">
+                <img src="./img/popular3.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 4-->
+            <div class="box">
+                <img src="./img/popular4.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+        </div>
     </section>
     <!--Popular Section End-->
     <!--Link to JS-->
