--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link href='http://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <title>Furniture Shop</title>
 </head>
 
 <body>
+    <!--Scroll Top-->
+    <a href="" class="scroll-top"><i class="bx bx-up-arrow-alt"></i></a>
     <header>
         <div class="nav container">
 
@@ -142,6 +145,176 @@
         </div>
     </section>
     <!--Popular Section End-->
+    <!--About Section Start-->
+    <section class="about container" id="about">
+        <div class="about-img">
+            <img src="./img/about.png" alt="">
+        </div>
+        <!--About Text-->
+        <div class="about-text">
+            <h2>About Us</h2>
+            <p>Discover a Minimalistic Sense of Style</p>
+            <div class="features">
+                <i class="bx bxs-checkbox-checked"><span>Free Home Delivery</span></i>
+                <i class="bx bxs-checkbox-checked"><span>Easy Returns</span></i>
+                <i class="bx bxs-checkbox-checked"><span>Quality Assurance</span></i>
+            </div>
+        </div>
+    </section>
+    <!--About Section End-->
+    <!--Products Section Start-->
+    <section class="products container">
+        <div class="heading">
+            <h2> Product Shop</h2>
+            <a href="#">See All</a>
+        </div>
+        <!--Products-->
+        <div class="products-content">
+            <!--Box 1-->
+            <div class="box">
+                <img src="./img/products1.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 2-->
+            <div class="box">
+                <img src="./img/products2.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 3-->
+            <div class="box">
+                <img src="./img/products3.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 4-->
+            <div class="box">
+                <img src="./img/products4.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 5-->
+            <div class="box">
+                <img src="./img/products5.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 6-->
+            <div class="box">
+                <img src="./img/products6.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 7-->
+            <div class="box">
+                <img src="./img/products7.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+            <!--Box 8-->
+            <div class="box">
+                <img src="./img/products8.png" alt="">
+                <div class="box-text">
+                    <div class="title-price">
+                        <h3>Soft Furniture</h3>
+                        <span>$150</span>
+                    </div>
+                    <a href="#" class=""><i class="bx bx-cart-alt"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Product Section End-->
+    <!--Newsletter Section Start-->
+    <section class="newsletter">
+        <div class="newsletter-content container">
+            <div class="newsletter-text">
+                <h2>SIGN UP AND WIN</h2>
+                <p>Sign up and get a chance to win giveaway of the week</p>
+            </div>
+            <!--Form-->
+            <form action="">
+                <input type="email" name="" placeholder="Enter Your Email..." required>
+                <input type="submit" value="Subscribe" class="btn">
+            </form>
+        </div>
+    </section>
+    <!--Newsletter Section End-->
+    <!--Footer Start-->
+    <div class="footer-container">
+        <div class="footer-box">
+            <h3>The Company</h3>
+            <a href="#">About Us</a>
+            <a href="#">Help</a>
+            <a href="#">Blog </a>
+            <a href="#">Privacy Policy</a>
+        </div>
+        <div class="footer-box">
+            <h3>Popular Categories</h3>
+            <a href="#">Bedrooms</a>
+            <a href="#">Living Rooms</a>
+            <a href="#">Outdoor</a>
+            <a href="#">Kitchen</a>
+        </div>
+        <div class="footer-box">
+            <h3>More Information</h3>
+            <a href="#">Shipping</a>
+            <a href="#">Delivery and Returns</a>
+            <a href="#">Contact Us</a>
+            <a href="#">Sitemap</a>
+        </div>
+    </div>
+    </section>
+    <div class="hero">
+        <div class="social-links">
+            <a href=""><i class="fab fa-facebook-f"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-github"></i></a>
+            <a href=""><i class="fab fa-linkedin-in"></i></a>
+        </div>
+    </div>
+    <!--Footer End-->
+    <!--Copyright-->
+    <div class="copyright">
+        <p>Hope Kenga🌸. All rights reserved.</p>
+    </div>
     <!--Link to JS-->
     <script src="main.js"></script>
 </body>
